src/test/ui/cast/cast-rfc0401-2.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/cast-rfc0401-2.rs:6:13
   |
LL |     let _ = 3 as bool;
   |             ^^^^^^^^^ unsupported cast
   |
   = help: compare with zero instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0054`.
